@@ -6,13 +6,14 @@ set -e
 if [[ ! -z "${DEBUG}" ]]; then
     set -x
 fi
-
+NODE_ID_SEED=${NODE_ID_SEED:-$RANDOM}
 # set some helpful variables
 export SERVICE_PROPERTY_FILE='etc/i5.las2peer.services.mobsos.queryVisualization.QueryVisualizationService.properties'
 export WEB_CONNECTOR_PROPERTY_FILE='etc/i5.las2peer.connectors.webConnector.WebConnector.properties'
-export SERVICE_VERSION=$(awk -F "=" '/service.version/ {print $2}' etc/ant_configuration/service.properties)
-export SERVICE_NAME=$(awk -F "=" '/service.name/ {print $2}' etc/ant_configuration/service.properties)
-export SERVICE_CLASS=$(awk -F "=" '/service.class/ {print $2}' etc/ant_configuration/service.properties)
+export SERVICE_VERSION=$(awk -F "=" '/service.version/ {print $2}' gradle.properties )
+export SERVICE_NAME=$(awk -F "=" '/service.name/ {print $2}' gradle.properties )
+export SERVICE_CLASS=$(awk -F "=" '/service.class/ {print $2}' gradle.properties )
+
 export SERVICE=${SERVICE_NAME}.${SERVICE_CLASS}@${SERVICE_VERSION}
 export CREATE_DB_SQL='db.sql'
 export CREATE_EXAMPLE_DB_SQL='mysqlsampledatabase.sql'
@@ -34,6 +35,7 @@ export EXAMPLE_DB_TYPE='MySQL'
 [[ -z "${MYSQL_EXAMPLE_PASSWORD}" ]] && export MYSQL_EXAMPLE_PASSWORD='example'
 [[ -z "${MYSQL_EXAMPLE_HOST}" ]] && export MYSQL_EXAMPLE_HOST='mysql'
 [[ -z "${MYSQL_EXAMPLE_PORT}" ]] && export MYSQL_EXAMPLE_PORT='3306'
+[[ -z "${RESULT_TIMEOUT}" ]] && export RESULT_TIMEOUT='360'
 
 
 # set defaults for optional web connector parameters
@@ -62,6 +64,7 @@ set_in_service_config exDatabase ${MYSQL_EXAMPLE_DATABASE}
 set_in_service_config exUser ${MYSQL_EXAMPLE_USER}
 set_in_service_config exPassword ${MYSQL_EXAMPLE_PASSWORD}
 set_in_service_config exType ${EXAMPLE_DB_TYPE}
+set_in_service_config resultTimeout ${RESULT_TIMEOUT}
 
 # configure web connector properties
 
@@ -121,17 +124,41 @@ if [[ ! -z "${BOOTSTRAP}" ]]; then
     done
 fi
 
+
 # prevent glob expansion in lib/*
 set -f
-LAUNCH_COMMAND='java -cp lib/* i5.las2peer.tools.L2pNodeLauncher -s service -p '"${LAS2PEER_PORT} ${SERVICE_EXTRA_ARGS}"
+LAUNCH_COMMAND='java -cp lib/* --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED i5.las2peer.tools.L2pNodeLauncher -s service -p '"${LAS2PEER_PORT} ${SERVICE_EXTRA_ARGS}"
 if [[ ! -z "${BOOTSTRAP}" ]]; then
     LAUNCH_COMMAND="${LAUNCH_COMMAND} -b ${BOOTSTRAP}"
 fi
 
+# it's realistic for different nodes to use different accounts (i.e., to have
+# different node operators). this function echos the N-th mnemonic if the
+# variable WALLET is set to N. If not, first mnemonic is used
+function selectMnemonic {
+    declare -a mnemonics=("differ employ cook sport clinic wedding melody column pave stuff oak price" "memory wrist half aunt shrug elbow upper anxiety maximum valve finish stay" "alert sword real code safe divorce firm detect donate cupboard forward other" "pair stem change april else stage resource accident will divert voyage lawn" "lamp elbow happy never cake very weird mix episode either chimney episode" "cool pioneer toe kiwi decline receive stamp write boy border check retire" "obvious lady prize shrimp taste position abstract promote market wink silver proof" "tired office manage bird scheme gorilla siren food abandon mansion field caution" "resemble cattle regret priority hen six century hungry rice grape patch family" "access crazy can job volume utility dial position shaft stadium soccer seven")
+    if [[ ${WALLET} =~ ^[0-9]+$ && ${WALLET} -lt ${#mnemonics[@]} ]]; then
+    # get N-th mnemonic
+        echo "${mnemonics[${WALLET}]}"
+    else
+        # note: zsh and others use 1-based indexing. this requires bash
+        echo "${mnemonics[0]}"
+    fi
+}
+
+
+
+#prepare pastry properties
+echo external_address = $(curl -s https://ipinfo.io/ip):${LAS2PEER_PORT} > etc/pastry.properties
+echo ${LAUNCH_COMMAND}
 # start the service within a las2peer node
 if [[ -z "${@}" ]]
 then
-  exec ${LAUNCH_COMMAND} startService\("'""${SERVICE}""'", "'""${SERVICE_PASSPHRASE}""'"\) startWebConnector
+    if [ -n "$LAS2PEER_ETH_HOST" ]; then
+        exec ${LAUNCH_COMMAND} --observer --node-id-seed $NODE_ID_SEED --ethereum-mnemonic "$(selectMnemonic)"  startService\("'""${SERVICE}""'", "'""${SERVICE_PASSPHRASE}""'"\)   "node=getNodeAsEthereumNode()" "registry=node.getRegistryClient()" "n=getNodeAsEthereumNode()" "r=n.getRegistryClient()"
+    else
+        exec ${LAUNCH_COMMAND} --observer --node-id-seed $NODE_ID_SEED  startService\("'""${SERVICE}""'", "'""${SERVICE_PASSPHRASE}""'"\) 
+    fi
 else
   exec ${LAUNCH_COMMAND} ${@}
 fi
